--- a/index.html
+++ b/index.html
@@ -15,17 +15,21 @@
         <button type="button" id='myBtn'>добавить</button>
     </div>
     <ul id="list"></ul>
-    <script src="script.js"></script>
+
 
 
     <div class="model" id="model">
         <div class="model-window">
-
-
+            <p class="model-msg">
+                удалить?
+            </p>
+            <button id='del'>удалить</button>
+            <button id='cenle'>отмена</button>
 
         </div>
 
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
