--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
     <div class="dd">
+
         <h1 class="yi">Мой список дел</h1>
-        <input type="text" id="name">
+        <input type="text" id="name" placeholder="дела">
         <button type="button" id='myBtn'>добавить</button>
+
     </div>
     <ul id="list"></ul>
 
